clusters/9ka/descheduler/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: descheduler
  namespace: descheduler
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: descheduler
      app.kubernetes.io/name: descheduler
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
